fix: responsive layout on mobile

--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -33,7 +33,7 @@ a:hover {
 /** Button */
 
 .btn {
-  @apply inline-block text-center px-8 py-2 border border-solid rounded-full border-white text-white
+  @apply inline-block text-center px-4 py-2 border border-solid rounded-full border-white text-white
 }
 
 .btn:hover {
@@ -51,7 +51,7 @@ a:hover {
 /** Picture */
 
 .picture {
-  @apply block mx-auto w-full py-4 px-8
+  @apply block mx-auto w-full py-4 px-4
 }
 
 /** Hero */
